fix: show calculator on mobile pt12

--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ h1, h2, h3, h4, h5, h6 {
 
 button {
   border-radius: 15px;
-  flex: 1 60px;
+  flex: 1 0 18%;
   height: 54px;
   font-size: 1.9em;
   color: #fff;
@@ -229,7 +229,6 @@ button.click-highlight {
   }
 
   button {
-    flex: 1 0 11%;
     font-size: 1.7em;
   }
 
